--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
                 <li *ngFor="let nav of navbarlist">
-                    <a href={{nav}}>{{nav}}</a>
+                    <a href={{nav.target}}>{{nav.display}}</a>
                 </li>
 
             </ul>
