--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -20,3 +20,11 @@
     border-color: transparent;
     color: #fff !important;
   }
+  .navbar-brand {
+    padding: 4px;
+  }
+  .logo-navbar {
+    width: 60px;
+    padding: 4px;
+    background-color: white;
+  }
