--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
-<app-navbar></app-navbar>
+<app-navbar (messageEvent)="receiveMsg($event)"></app-navbar>
 
 <h1>{{title}}</h1>
 <div class="content" role="main">
