--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,13 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
-<app-navbar (messageEvent)="receiveMsg($event)"></app-navbar>
-
+<app-navbar id="myPage" (messageEvent)="receiveMsg($event)"></app-navbar>
+<app-header></app-header>
+<div id="about" style="width: 100%; height: 500px; background-color: #aff;"><p>fill 1</p></div>
 <h1>{{title}}</h1>
+<div id="home" style="width: 100%; height: 500px; background-color: #faf;"><p>fill 2</p></div>
+<div id="car" style="width: 100%; height: 500px; background-color: #ffa;"><p>fill 3</p></div>
+<div style="width: 100%; height: 500px; background-color: #afa;"><p>fill 4</p></div>
 <div class="content" role="main">
 
 
