space under navbar

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -8,23 +8,30 @@
     letter-spacing: 4px;
     border-radius: 0;
     font-family: Montserrat, sans-serif;
-  }
-  .navbar li a, .navbar .navbar-brand {
+}
+
+.navbar li a,
+.navbar .navbar-brand {
     color: #fff !important;
-  }
-  .navbar-nav li a:hover, .navbar-nav li.active a {
+}
+
+.navbar-nav li a:hover,
+.navbar-nav li.active a {
     color: #f4511e !important;
     background-color: #fff !important;
-  }
-  .navbar-default .navbar-toggle {
+}
+
+.navbar-default .navbar-toggle {
     border-color: transparent;
     color: #fff !important;
-  }
-  .navbar-brand {
+}
+
+.navbar-brand {
     padding: 4px;
-  }
-  .logo-navbar {
+}
+
+.logo-navbar {
     width: 60px;
     padding: 4px;
     background-color: white;
-  }
+}
