--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron text-center">
+<div class="jumbotron text-center space-navbar">
     <h1>Car and Home Service</h1>
     <p>If you have something to do, call...</p>
     <!-- <form>
