--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,17 +7,16 @@
     <p>fill 1</p>
 </div>
 <h1>{{title}}</h1>
-<div id="home" style="width: 100%; height: 500px; background-color: #faf;">
+<div id="home" class="space-navbar" style="width: 100%; height: 500px; background-color: #faf;">
     <p>fill 2</p>
 </div>
-<div id="car" style="width: 100%; height: 500px; background-color: #ffa;">
+<div id="car" class="space-navbar" style="width: 100%; height: 500px; background-color: #ffa;">
     <p>fill 3</p>
 </div>
-<div style="width: 100%; height: 500px; background-color: #afa;">
+<div id="contact" class="space-navbar" style="width: 100%; height: 500px; background-color: #afa;">
     <p>fill 4</p>
 </div>
-<div class="content" role="main">
+<div class="content" role="main"></div>
 
 
-
-    <router-outlet></router-outlet>
+<router-outlet></router-outlet>
