--- a/src/app/homeandcar/homeandcar.component.html
+++ b/src/app/homeandcar/homeandcar.component.html
@@ -1,13 +1,11 @@
 <app-navbar id="myPage" (messageEvent)="receiveMsg($event)"></app-navbar>
 <div *ngIf="mainpage; else salepage">
     <app-header></app-header>
-    <div id="about" class="space-navbar" style="width: 100%; height: 500px; background-color: #aff;">
-        <p>fill 1</p>
-    </div>
-    <p>{{section}}</p>
+    <app-about id="about"></app-about>
     <div id="home" class="space-navbar" style="width: 100%; height: 500px; background-color: #faf;">
         <p>fill 2</p>
     </div>
+    <p>{{section}}</p>
     <div id="car" class="space-navbar" style="width: 100%; height: 500px; background-color: #ffa;">
         <p>fill 3</p>
     </div>
