build sevice list

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="about space-navbar container">
+<div class="about space-navbar container-fluid">
     <div class="row">
         <div class="col-sm-7 vcenter">
             <h2>About Company Page</h2><br>
