--- a/src/app/homeandcar/homeandcar.component.html
+++ b/src/app/homeandcar/homeandcar.component.html
@@ -2,13 +2,12 @@
 <div *ngIf="mainpage; else salepage">
     <app-header></app-header>
     <app-about id="about"></app-about>
-    <div id="home" class="space-navbar" style="width: 100%; height: 500px; background-color: #faf;">
+
+    <div id="home" class="space-navbar" style="width: 100%; height: 500px;">
         <p>fill 2</p>
     </div>
-    <p>{{section}}</p>
-    <div id="car" class="space-navbar" style="width: 100%; height: 500px; background-color: #ffa;">
-        <p>fill 3</p>
-    </div>
+    <!-- <p>{{section}}</p> -->
+    <app-car id="car"></app-car>
     <div id="contact" class="space-navbar" style="width: 100%; height: 500px; background-color: #afa;">
         <p>fill 4</p>
     </div>
