--- a/src/app/lielement/lielement.component.html
+++ b/src/app/lielement/lielement.component.html
@@ -1,1 +1,5 @@
-<p>lielement works!</p>
+<div class="element">
+    <i class="{{serv.symbol}} fa-2x"></i>
+    <h3>{{serv.title}}</h3>
+    <p>{{serv.description}}</p>
+</div>
