--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -1,15 +1,16 @@
 <div class="car space-navbar container-fluid">
     <div class="row">
-        <h2>Car Service</h2>
+        <h2 class="col">Car Service</h2>
     </div>
     <div class="row">
         <ul>
-            <li *ngFor="let serv of servlist">
-                <span>
+            <li *ngFor="let serv of servlist" class="col-md-6">
+                <!-- <span>
                     <i class="fas fa-tools"></i>
                     <h4 style="display: inline;">{{serv.title}}</h4>
-                </span>
-                <p>{{serv.description}}</p>
+                </span> -->
+                <app-lielement [serv]="serv"></app-lielement>
+                <!-- <p>{{serv.description}}</p> -->
             </li>
 
         </ul>
