--- a/src/app/homeandcar/homeandcar.component.html
+++ b/src/app/homeandcar/homeandcar.component.html
@@ -3,9 +3,7 @@
     <app-header></app-header>
     <app-about id="about"></app-about>
 
-    <div id="home" class="space-navbar" style="width: 100%; height: 500px;">
-        <p>fill 2</p>
-    </div>
+    <app-home id="car"></app-home>
     <!-- <p>{{section}}</p> -->
     <app-car id="car"></app-car>
     <div id="contact" class="space-navbar" style="width: 100%; height: 500px; background-color: #afa;">
