--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -4,19 +4,10 @@
     </div>
     <div class="row">
         <ul>
-            <li *ngFor="let serv of servlist" class="col-md-6">
-                <!-- <span>
-                    <i class="fas fa-tools"></i>
-                    <h4 style="display: inline;">{{serv.title}}</h4>
-                </span> -->
+            <li *ngFor="let serv of servlist" class="col-md-6 slideanim">
                 <app-lielement [serv]="serv"></app-lielement>
-                <!-- <p>{{serv.description}}</p> -->
             </li>
 
         </ul>
-
-        <!-- <div class="col-sm-5 slideanim vcenter">
-            <img class="align-middle" src="assets/img/logo.svg" alt="logo">
-        </div> -->
     </div>
 </div>
