--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div class="home space-navbar container-fluid">
+    <div class="row">
+        <h2 class="col">Home Service</h2>
+    </div>
+    <div class="row">
+        <ul>
+            <li *ngFor="let serv of servlist" class="col-md-6 slideanim">
+                <app-lielement [serv]="serv"></app-lielement>
+            </li>
+
+        </ul>
+    </div>
+</div>
