style small size

--- a/src/app/lielement/lielement.component.html
+++ b/src/app/lielement/lielement.component.html
@@ -1,5 +1,7 @@
 <div class="element">
-    <i class="{{serv.symbol}} fa-2x"></i>
-    <h4>{{serv.title}}</h4>
+    <div class="text-center">
+        <i class="{{serv.symbol}}"></i>
+        <h4>{{serv.title}}</h4>
+    </div>
     <p>{{serv.description}}</p>
 </div>
