--- a/src/app/lielement/lielement.component.css
+++ b/src/app/lielement/lielement.component.css
@@ -9,3 +9,15 @@ h4 {
     display: inline-block;
     padding-left: 15px;
 }
+
+.fas {
+    font-size: 1.3em;
+}
+
+@media (max-width: 400px) {
+    h4 {
+        padding-left: 5px;
+        letter-spacing: -0.7px;
+    }
+    .fa-2x {}
+}
