--- a/src/app/lielement/lielement.component.css
+++ b/src/app/lielement/lielement.component.css
@@ -1,5 +1,5 @@
 .element {
-    margin: 15px;
+    margin: 15px 10px;
     padding: 0 10px 5px;
     border-radius: 25px 0;
     background-color: rgba(255, 238, 0, 0.4);
@@ -7,17 +7,10 @@
 
 h4 {
     display: inline-block;
-    padding-left: 15px;
+    padding-left: 8px;
+    letter-spacing: -0.7px;
 }
 
 .fas {
     font-size: 1.3em;
-}
-
-@media (max-width: 400px) {
-    h4 {
-        padding-left: 5px;
-        letter-spacing: -0.7px;
-    }
-    .fa-2x {}
 }
