--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,13 +1,69 @@
 <div class="about space-navbar container-fluid">
     <div class="row">
         <div class="col-sm-7 vcenter">
-            <h2>About Company Page</h2><br>
+            <h2>About Home & Car Services</h2><br>
             <h4>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it?</h4><br>
             <p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too
                 fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends.</p>
         </div>
         <div class="col-sm-5 slideanim vcenter">
             <img class="align-middle" src="assets/img/logo.svg" alt="logo">
+        </div>
+    </div>
+    <div class="row">
+        <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="../../assets/img/injectortesting.jpeg" alt="">
+                    <div class="carousel-caption">
+                        <h4>Injector testing</h4>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="../../assets/img/engine.jpg" alt="">
+                    <div class="carousel-caption">
+                        <h4>Engine repairs</h4>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="../../assets/img/jack.jpeg" alt="">
+                    <div class="carousel-caption">
+                        <h4>We do bla bla bla</h4>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="../../assets/img/tirechange.jpeg" alt="">
+                    <div class="carousel-caption">
+                        <h4>We do bla bla bla</h4>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="../../assets/img/welding.jpeg" alt="">
+                    <div class="carousel-caption">
+                        <h4>We do bla bla bla</h4>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
 </div>
