--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -24,7 +24,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="./assets/img/injectortesting.jpeg" alt="">
+                    <img src="assets/img/injectortesting.jpeg" alt="">
                     <div class="carousel-caption">
                         <h4>Injector testing</h4>
                     </div>
@@ -36,19 +36,19 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="../assets/img/jack.jpeg" alt="">
+                    <img src="assets/img/jack.jpeg" alt="">
                     <div class="carousel-caption">
                         <h4>We do bla bla bla</h4>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="../../assets/img/tirechange.jpeg" alt="">
+                    <img src="assets/img/tirechange.jpeg" alt="">
                     <div class="carousel-caption">
                         <h4>We do bla bla bla</h4>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="../../assets/img/welding.jpeg" alt="">
+                    <img src="assets/img/welding.jpeg" alt="">
                     <div class="carousel-caption">
                         <h4>We do bla bla bla</h4>
                     </div>
