--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="row">
-        <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+        <div id="myCarousel" class="slideanim carousel slide text-center" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
