--- a/src/app/homeandcar/homeandcar.component.html
+++ b/src/app/homeandcar/homeandcar.component.html
@@ -7,9 +7,7 @@
         <app-home id="home"></app-home>
         <!-- <p>{{section}}</p> -->
         <app-car id="car"></app-car>
-        <div id="contact" class="space-navbar" style="width: 100%; height: 500px; background-color: #afa;">
-            <p>fill 4</p>
-        </div>
+        <app-contact id="contact"></app-contact>
         <div class="content" role="main"></div>
     </div>
     <div id="forsale">
