--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,11 +3,33 @@
         <h2 class="col">Contact</h2>
     </div>
     <div class="row">
-        <h4 class="col-sm-2 text-center">
-            Unit 4<br> Kelly's Unit<br> Glencar
-            <br> Letterkenny
-            <br> co. Donegal
-        </h4>
+
+        <div class="col-sm-2">
+
+            <div class="myrow">
+                <h4 class="text-center">
+                    <b>Unit 4</b>
+                    <br> Kelly's Unit<br> Glencar
+                    <br> Letterkenny
+                    <br> co. Donegal
+                </h4>
+            </div>
+            <div class="myrow">
+                <h4 class="text-center">
+                    <b>Eir Code</b>
+                    <br> F92 W660
+                </h4>
+            </div>
+            <div class="myrow">
+                <h4 class="text-center">
+                    <b>GPS Coordinates</b>
+                    <br>Lat 54.958832
+                    <br>Long -7.747500
+                </h4>
+            </div>
+
+        </div>
+
         <div class="col-sm-10 text-center">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2290.7390829994!2d-7.747636683960312!3d54.960137060311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTTCsDU3JzM2LjUiTiA3wrA0NCc0My42Ilc!5e0!3m2!1sen!2sie!4v1583527526984!5m2!1sen!2sie"
                 id="map" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="">
