--- a/src/app/forsale/forsale.component.html
+++ b/src/app/forsale/forsale.component.html
@@ -2,7 +2,8 @@
     <h2>Car parts for sale</h2>
     <ul class="parts">
         <li *ngFor="let part of parts">
-            <app-for-sale-part [part]=part></app-for-sale-part>
+            <app-for-sale-part [part]=part (click)="onSelectPart(part)">
+            </app-for-sale-part>
         </li>
     </ul>
 </div>
