--- a/src/app/for-sale-part/for-sale-part.component.html
+++ b/src/app/for-sale-part/for-sale-part.component.html
@@ -1,1 +1,7 @@
-<p>ID = {{part.id}}</p>
+<div class="card">
+    <h3 class="card-title">{{ part.name }}</h3>
+    <img [src]='part.image' alt="image" class="card-img">
+    <p class="card-text">{{ part.description }}</p>
+    <p>Price: <b>&euro; {{ part.price }}</b></p>
+    <p>Quantity: <b>{{ part.quantity }}</b> pcs</p>
+</div>
