--- a/src/app/homeandcar/homeandcar.component.html
+++ b/src/app/homeandcar/homeandcar.component.html
@@ -10,10 +10,10 @@
         <app-contact id="contact"></app-contact>
         <div class="content" role="main"></div>
     </div>
-    <div id="forsale">
+    <div>
         <ng-template #salepage class="space-navbar">
 
-            <app-forsale></app-forsale>
+            <app-forsale id="forsale"></app-forsale>
 
         </ng-template>
     </div>
