--- a/src/app/for-sale-part/for-sale-part.component.html
+++ b/src/app/for-sale-part/for-sale-part.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <h3 class="card-title">{{ part.id }}. {{ part.name }}</h3>
+    <h3 class="card-title">{{ part.key }}. {{ part.name }}</h3>
     <img [src]='part.image' alt="image" class="card-img">
     <p class="card-text">{{ part.description }}</p>
     <p>Price: <b>&euro; {{ part.price }}</b></p>
