--- a/src/app/homeandcar/homeandcar.component.html
+++ b/src/app/homeandcar/homeandcar.component.html
@@ -13,7 +13,8 @@
     <div>
         <ng-template #salepage class="space-navbar">
 
-            <app-forsale id="forsale"></app-forsale>
+            <app-create-part id="forsale"></app-create-part>
+            <!-- <app-forsale id="forsale"></app-forsale> -->
 
         </ng-template>
     </div>
