--- a/src/app/create-part/create-part.component.html
+++ b/src/app/create-part/create-part.component.html
@@ -1,20 +1,37 @@
-<h2>Create Part</h2>
-<div class="create-part" [hidden]="submitted">
-    <form (ngSubmit)="onSubmit()">
+<div class="create-part card" [hidden]="submitted">
+    <form [formGroup]="formTemplate" (ngSubmit)="onSubmit()" class="card-body">
+        <br><br>
+        <h2>Create Part</h2>
+
         <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" minlength="3" id="name" required class="form-control" [(ngModel)]="part.name" name="name" #name="ngModel">
-            <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
+            <label>Image</label>
+            <input type="file" class="form-control" formControlName="image">
+        </div>
+
+        <div class="form-group">
+            <input minlength="3" required class="form-control" formControlName="name" placeholder="Name / Title">
+            <div *ngIf="false" class="alert alert-danger">
                 Name must be at least 3 characters long.
             </div>
         </div>
 
         <div class="form-group">
-            <label for="quantity">Quantity</label>
-            <input type="number" min="1" max="100" id="quantity" required class="form-control" [(ngModel)]="part.quantity" name="quantity" #quantity="ngModel" (change)="log(quantity)">
+            <label>Quantity</label>
+            <input type="number" min="1" max="100" class="form-control" formControlName="quantity">
         </div>
 
-        <button *ngIf="name.valid && quantity.valid" type="submit" class="btn btn-success">Submit</button>
+        <div class="form-group">
+            <label>Price</label>
+            <input type="number" min="0.01" max="100000" step="0.01" class="form-control" formControlName="price">
+        </div>
+
+        <div class="form-group">
+            <textarea rows="3" class="form-control" formControlName="description" placeholder="Description"></textarea>
+        </div>
+
+        <div class="form-group">
+            <button type="submit" class="btn btn-success">Submit</button>
+        </div>
     </form>
 </div>
 
