--- a/src/app/homeandcar/homeandcar.component.html
+++ b/src/app/homeandcar/homeandcar.component.html
@@ -14,7 +14,7 @@
         <ng-template #salepage class="space-navbar">
 
             <app-create-part id="forsale"></app-create-part>
-            <!-- <app-forsale id="forsale"></app-forsale> -->
+            <app-forsale></app-forsale>
 
         </ng-template>
     </div>
