--- a/src/app/create-part/create-part.component.html
+++ b/src/app/create-part/create-part.component.html
@@ -1,11 +1,16 @@
-<div class="create-part card" [hidden]="submitted">
+<div [hidden]="display">
+    <h4>Submitted succesfully</h4>
+    <button class="btn btn-success" (click)="openForm()">Add new part for sale</button>
+</div>
+
+<div class="create-part card" [hidden]="!display">
     <form [formGroup]="formTemplate" (submit)="onSubmit(formTemplate.value)" class="card-body">
         <br><br>
-        <h2>Create Part</h2>
+        <h2>Create Part for Sale</h2>
 
         <div class="form-group">
             <input minlength="3" required class="form-control" formControlName="name" placeholder="Name / Title">
-            <div class="text-danger" *ngIf="fC.name.invalid && fC.name.touched">Name must be at least 3 characters long.</div>
+            <div class="text-danger" *ngIf="fC.name.invalid && submitted">Name must be at least 3 characters long.</div>
         </div>
 
         <div class="row text-center">
@@ -14,6 +19,7 @@
         </div>
         <div class="form-group">
             <input type="file" accept="image/*" class="form-control" formControlName="image" #fileUploader (change)="showPreview($event)">
+            <div class="text-danger" *ngIf="fC.image.invalid && fC.image.touched">Quantity must be up to 100</div>
         </div>
 
         <div class="form-group">
@@ -25,7 +31,7 @@
         <div class="form-group">
             <label>Price</label>
             <input type="number" min="0.01" max="100000" step="0.01" class="form-control" formControlName="price">
-            <div class="text-danger" *ngIf="fC.price.invalid && fC.price.touched">Type correct value</div>
+            <div class="text-danger" *ngIf="fC.price.invalid && submitted">Type correct value</div>
         </div>
 
         <div class="form-group">
@@ -36,9 +42,4 @@
             <button type="submit" class="btn btn-success">Submit</button>
         </div>
     </form>
-</div>
-
-<div [hidden]="!submitted">
-    <h4>Submitted succesfully</h4>
-    <button class="btn byn-succes" (click)="newPart()">Add</button>
 </div>
