--- a/src/app/forsale/forsale.component.html
+++ b/src/app/forsale/forsale.component.html
@@ -1,7 +1,7 @@
 <div class="space-navbar">
     <h2 class="row">Car parts for sale</h2>
     <div class="row">
-        <div class="col-sm-6" *ngFor="let part of parts | async">
+        <div class="col-sm-6" *ngFor="let part of parts">
             <app-for-sale-part [part]='part' (click)="onSelectPart(part)">
             </app-for-sale-part>
         </div>
