--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="jumbotron text-center space-navbar header">
     <h1>Home & Car Service</h1>
-    <p>If you have something to do, call...</p>
+    <p>We start when your engine stops.</p>
 </div>
