--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,14 @@
         <h2 class="col">Home Service</h2>
     </div>
     <div class="row">
+        <p class="col-sm-1"></p>
+        <h4 class="col-sm-10">Need help keeping your front garden looking fab? Or you just dont have time to do your house chores, we got you covered!
+        </h4>
+    </div>
+    <div class="row">
+        <h3 class="text-center">Our services include but are not limited to:</h3>
+    </div>
+    <div class="row">
         <ul>
             <li *ngFor="let serv of servlist" class="col-md-6 slideanim">
                 <app-lielement [serv]="serv"></app-lielement>
