--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,9 +2,8 @@
     <div class="row">
         <div class="col-sm-7 vcenter">
             <h2>About Home & Car Services</h2><br>
-            <h4>Do you see any Teletubbies in here? Do you see a slender plastic tag clipped to my shirt with my name printed on it?</h4><br>
-            <p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too
-                fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We're on the same curve, just on opposite ends.</p>
+            <h4>Offering wide array of services from pre-NCT test to home maintenance and landscaping, we make sure that all your home and car needs can be dealt, with just one phone call.</h4><br>
+            <p>We have been on the market since 2006</p>
         </div>
         <div class="col-sm-5 slideanim vcenter">
             <img class="align-middle" src="assets/img/logo.svg" alt="logo">
@@ -38,19 +37,19 @@
                 <div class="item">
                     <img src="assets/img/jack.jpeg" alt="">
                     <div class="carousel-caption">
-                        <h4>We do bla bla bla</h4>
+                        <h4>Pre-NCT and re-Test service</h4>
                     </div>
                 </div>
                 <div class="item">
                     <img src="assets/img/tirechange.jpeg" alt="">
                     <div class="carousel-caption">
-                        <h4>We do bla bla bla</h4>
+                        <h4>Wheel alignment</h4>
                     </div>
                 </div>
                 <div class="item">
                     <img src="assets/img/welding.jpeg" alt="">
                     <div class="carousel-caption">
-                        <h4>We do bla bla bla</h4>
+                        <h4>Exhaust Welding & Service</h4>
                     </div>
                 </div>
             </div>
