--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -3,6 +3,13 @@
         <h2 class="col">Car Service</h2>
     </div>
     <div class="row">
+        <p class="col-sm-1"></p>
+        <h4 class="col-sm-10">From tires to transmissions, we've got everything you need to keep your vehivle at peak performance. If you can drive it in, we can fix it. If you need a tow, we can help with that too!</h4>
+    </div>
+    <div class="row">
+        <h3 class="text-center">Our services include but are not limited to:</h3>
+    </div>
+    <div class="row">
         <ul>
             <li *ngFor="let serv of servlist" class="col-md-6 slideanim">
                 <app-lielement [serv]="serv"></app-lielement>
