--- a/src/app/homeandcar/homeandcar.component.html
+++ b/src/app/homeandcar/homeandcar.component.html
@@ -1,6 +1,6 @@
 <app-navbar id="myPage" (messageEvent)="receiveMsg($event)"></app-navbar>
 <div class="homeandcar">
-    <div *ngIf="mainpage; else salepage">
+    <div *ngIf="mainpage; else salepage" [hidden]="login">
         <app-header></app-header>
         <app-about id="about"></app-about>
 
@@ -10,13 +10,16 @@
         <app-contact id="contact"></app-contact>
         <div class="content" role="main"></div>
     </div>
-    <div>
+    <div [hidden]="login">
         <ng-template #salepage class="space-navbar">
 
             <app-create-part id="forsale"></app-create-part>
             <app-forsale></app-forsale>
 
         </ng-template>
+    </div>
+    <div id="login" [hidden]="!login" class="space-navbar">
+        <app-login></app-login>
     </div>
     <div id="bottom" class="space-navbar" style="width: 100%; height: 600px; background-color: #afa;">
         <p>fill footer</p>
