create form style

--- a/src/app/create-part/create-part.component.css
+++ b/src/app/create-part/create-part.component.css
@@ -5,3 +5,13 @@
 img {
     width: 60%;
 }
+
+.plr20 {
+    padding-left: 10px;
+    padding-right: 0;
+}
+
+.prl20 {
+    padding-left: 0;
+    padding-right: 10px;
+}
