--- a/src/app/lielement/lielement.component.html
+++ b/src/app/lielement/lielement.component.html
@@ -3,5 +3,5 @@
         <i class="{{serv.symbol}}"></i>
         <h4>{{serv.title}}</h4>
     </div>
-    <p>{{serv.description}}</p>
+    <!-- <p>{{serv.description}}</p> -->
 </div>
