--- a/src/styles.css
+++ b/src/styles.css
@@ -90,3 +90,13 @@ h4 {
         -webkit-transform: translateY(0%);
     }
 }
+
+
+/* html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
+
+mat-dialog-container#modal-component {
+    border: 3px solid #262626;
+    border-radius: 11px;
+    background-color: #1a1a1a;
+}
