--- a/src/app/edit-part/edit-part.component.html
+++ b/src/app/edit-part/edit-part.component.html
@@ -1,1 +1,52 @@
-<p>edit-part works!</p>
+<div class="edit-part row">
+    <form [formGroup]="formTemplate" (submit)="onSubmit(formTemplate.value)">
+        <h2>Edit Part for Sale</h2>
+
+        <div class="form-group">
+            <input minlength="3" required class="form-control input-lg" formControlName="name" placeholder="Name / Title">
+            <div class="text-danger" *ngIf="fC.name.invalid && submitted">Name must be at least 3 characters long.</div>
+        </div>
+
+        <div class="row text-center">
+            <img [src]="imgSrc" alt="photo" (click)="fileUploader.click()">
+            <!-- (dragover)="onDragOver($event)" (drop)="onDrop($event)" -->
+        </div>
+        <div class="form-group">
+            <input type="file" accept="image/*" class="form-control" formControlName="image" #fileUploader (change)="showPreview($event)">
+            <div class="text-danger" *ngIf="fC.image.invalid && fC.image.touched">Select photo file</div>
+        </div>
+
+        <div class="form-group col-sm-6">
+            <div class="form-row">
+                <label class="col-xs-3 col-form-label prl20">Quantity</label>
+                <div class="col-xs-9 plr20">
+                    <input type="number" min="1" max="100" class="form-control plr20" formControlName="quantity">
+                </div>
+                <div class="text-danger" *ngIf="fC.quantity.invalid">Quantity must be up to 100</div>
+            </div>
+        </div>
+
+        <div class="form-group col-sm-6">
+            <div class="form-row">
+                <label class="col-xs-3 col-form-label prl20">Price</label>
+                <div class="col-xs-9 plr20">
+                    <input type="number" min="0.01" max="100000" step="0.01" class="form-control plr20" formControlName="price">
+                </div>
+                <div class="text-danger" *ngIf="fC.price.invalid && submitted">Type correct value</div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <textarea rows="3" class="form-control" formControlName="description" placeholder="Description"></textarea>
+        </div>
+
+        <div class="form-group">
+            <div class="col-xs-6">
+                <button type="submit" class="btn btn-danger btn-block">Submit</button>
+            </div>
+            <div class="col-xs-6">
+                <button class="btn btn-success btn-block" (click)="cancel()">Cancel</button>
+            </div>
+        </div>
+    </form>
+</div>
