--- a/src/styles.css
+++ b/src/styles.css
@@ -96,7 +96,7 @@ h4 {
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
 
 mat-dialog-container#modal-component {
-    border: 3px solid #262626;
+    border: 3px solid #333;
     border-radius: 11px;
-    background-color: #1a1a1a;
+    background-color: #222;
 }
