--- a/src/app/edit-part/edit-part.component.html
+++ b/src/app/edit-part/edit-part.component.html
@@ -1,4 +1,5 @@
 <div class="edit-part row">
+    <a href="#forsale" style="display: none;" id="toForSale"></a>
     <form [formGroup]="formTemplate" (submit)="onSubmit(formTemplate.value)">
         <h2>Edit Part for Sale</h2>
 
