--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -8,6 +8,15 @@
     font-weight: bold;
 }
 
+h3 {
+    font-size: 21px;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .myrow p {
     margin: 0;
 }
