--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,6 +3,21 @@
         <h2 class="col">Contact</h2>
     </div>
     <div class="row">
+        <h3 class="col-md-4 col-sm-6 text-center">
+            <i class="fas fa-phone">&nbsp;-&nbsp;(074) 910 9952</i>
+        </h3>
+        <h3 class="col-md-4 col-sm-6 text-center">
+            <i class="fas fa-mobile-alt">&nbsp;-&nbsp;0871 222 770</i>
+        </h3>
+        <h3 class="col-md-4 col-sm-12 text-center">
+            <a href="mailto:candhservice@gmail.com" target="_blank">
+                <i class="far fa-envelope">
+                    &nbsp;-&nbsp;candhservice@gmail.com
+                </i>
+            </a>
+        </h3>
+    </div>
+    <div class="row">
 
         <div class="col-sm-2">
 
